<resources>
    <string name="app_name">1918006</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="Safood">Jalan yuk !!</string>
    <string name="Surya">Mabar skuy</string>
    <string name="Lya">Apa ?</string>
    <string name="Ria">Gatau</string>
    <string name="wa">+62 878-7917-0228</string>
    <string name="gmail">1918006@scholar.itn.ac.id</string>
    <string name="instagram">Nyx_nocturnal</string>
</resources>