<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#363539">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="2">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/cwek2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/safood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Safood"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/safood"
                android:text="@string/Safood"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"

        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="2">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/cwek3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/Lya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lya"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Lya"
                android:text="@string/Lya"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"

        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="2">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/cwek1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/Rya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rya"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Rya"
                android:text="@string/Ria"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"

        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="2">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/cwok4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/Su"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Surya"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Su"
                android:text="@string/Surya"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>