<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/topLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/topImg"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:src="@drawable/top_bg" />



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:src="@drawable/ic_baseline_settings_24" />

            <TextView
                android:id="@+id/tvnama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:text="Juniko Ega Pratama"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAlamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvnama"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:drawableStart="@drawable/ic_baseline_location_on_24"
                android:drawablePadding="4dp"
                android:text="Jl. Ahmad Yani No. 07 Solo"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"

                android:layout_width="98dp"
                android:layout_height="98dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:src="@drawable/juniko"
                app:civ_border_color="#FFF"
                app:civ_border_width="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/topImg"
                android:layout_marginTop="60dp"
                android:gravity="center_horizontal"
                android:weightSum="3">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/jAppr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="5000"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_below="@id/jAppr"
                        android:layout_centerHorizontal="true"
                        android:text="Appreciations"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/jFollw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="700"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/jFollw"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/black"
                        android:text="Followers"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/jFollwi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="200"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/jFollwi"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/black"
                        android:text="Following"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_templerun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topLayout2"
            android:layout_marginTop="16dp"

            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_templerun"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/gmail" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp">

                <TextView
                    android:id="@+id/tvTemple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gmail"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTemple"
                    android:text="@string/gmail"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_wps"
            android:layout_below="@id/layout_templerun"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="2">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_wps"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/whatsapp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp">

                <TextView
                    android:id="@+id/tvWps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Whatsapp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvWps"
                    android:textColor="@color/black"
                    android:text="@string/wa"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_evernote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_wps"

            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_evernote"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/instagram" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp">

                <TextView
                    android:id="@+id/tvEvernote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Instagram"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvEvernote"
                    android:textColor="@color/black"
                    android:text="@string/instagram"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>